Adding sequential seeding of postgres and redis

--- a/src/booking-engine/app/views/App/Index.html
+++ b/src/booking-engine/app/views/App/Index.html
@@ -27,7 +27,7 @@
             <input type="submit" value="Block Seat" />
         </form>
         <form action="/Seat/Confirm" method="POST">
-            <input type="text" name="seatName" /><br/>
+            <input type="text" name="seatInfo" /><br/>
             <input type="submit" value="Confirm Seat" />
         </form>
     </div>
